--- a/views/home.pug
+++ b/views/home.pug
@@ -12,5 +12,7 @@ html(lang="en")
                 button Add Appointment
             a(href="/appointment")
                 button Edit/Delete Appointments
+            a(href='/view-appointment')
+                button View / Search
 
     script(src="script.js")
